--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1401,7 +1401,7 @@
         "from itertools import takewhile\n",
         "from functools import reduce\n",
         "\n",
-        "# Tree\n",
+        "# Tree classes for operators, operations, literals\n",
         "\n",
         "# Added for part 2\n",
         "\n",
@@ -1449,12 +1449,12 @@
         "    self.type_id = type_id\n",
         "    self.operands = operands\n",
         "  def evaluate(self):\n",
-        "    # return None  # part 1 when type ids were not known\n",
+        "    # return None  # part 1 (operations not yet known)\n",
         "    return operations[self.type_id].evaluate(self.operands)\n",
         "  def sum_version(self):\n",
         "    return self.version + sum(o.sum_version() for o in self.operands)\n",
         "  def __str__(self):\n",
-        "    # return f\"op[{self.version},{self.type_id}]({', '.join(str(o) for o in self.operands)})\"  # part 1 (type names not yet known)\n",
+        "    # return f\"op[{self.version},{self.type_id}]({', '.join(str(o) for o in self.operands)})\"  # part 1 (operations not yet known)\n",
         "    return f\"{operations[self.type_id]}({', '.join(str(o) for o in self.operands)})\"  # part 2\n",
         "  __repr__ = __str__\n",
         "\n",
@@ -1490,8 +1490,9 @@
         "  digit, rest = digit_rest\n",
         "  return digit[0] == '0'\n",
         "\n",
-        "# Literal parsing, assembling the binary representation from chunks\n",
-        "# (literal, previous rest), (digit chunk, rest) -> (literal + digit part of chunk, rest)\n",
+        "# Literal parsing, appends the binary representation of a digit to the previously\n",
+        "# parsed beginning of the literal; also keeps track of the parsing rest\n",
+        "# (literal, previous rest), (digit chunk, new rest) -> (literal + digit part of chunk, new rest)\n",
         "def append_digit(lit_prev_rest, digit_rest):\n",
         "  lit, _ = lit_prev_rest\n",
         "  digit, rest = digit_rest\n",
@@ -1499,8 +1500,8 @@
         "\n",
         "# Parsing = recursive assembly of a tree of Operations and Literals\n",
         "\n",
-        "def parse_literal(version, bin_input):\n",
-        "  lit, rest = reduce(append_digit, takeuntil(is_last_digit, chunked(bin_input, 5)), ('', ''))\n",
+        "def parse_literal(version, bin_input, chunk_len):\n",
+        "  lit, rest = reduce(append_digit, takeuntil(is_last_digit, chunked(bin_input, chunk_len)), ('', ''))\n",
         "  return (Literal(version, int(lit, 2)), rest)\n",
         "\n",
         "def parse_op_len(version, type_id, bin_input):\n",
@@ -1522,7 +1523,7 @@
         "    type_id, rest = read_bits(rest, 3)\n",
         "    if (type_id == 4):\n",
         "      # literal\n",
-        "      lit, rest = parse_literal(version, rest)\n",
+        "      lit, rest = parse_literal(version, rest, 5)\n",
         "      packets.append(lit)\n",
         "    else: \n",
         "      # operator\n",
@@ -1545,9 +1546,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "45WZNvhm4pXF",
-        "outputId": "32a80edb-2ef0-460d-ad9d-14d75ef18e17"
+        "outputId": "531e3af5-372e-4efd-f8ff-c1100bd407e3"
       },
-      "execution_count": 63,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1569,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNvqouvBxv3Ps/pPy1eAN0f",
+      "authorship_tag": "ABX9TyPrhdwpnHDl+OgEqfTfJDaN",
       "include_colab_link": true
     },
     "kernelspec": {
