--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1535,8 +1535,8 @@
         "# hex_input = '9C0141080250320F1802104A08'\n",
         "\n",
         "packets, rest = parse_packets(\"\".join(format(int(d, 16), '04b') for d in hex_input))\n",
-        "# print(\"packets:\", packets)\n",
-        "# print(\"rest:\", rest)\n",
+        "print(\"packets:\", packets)\n",
+        "print(\"rest:\", rest)\n",
         "print(\"part 1, sum of packet versions:\", sum(p.sum_version() for p in packets))\n",
         "print(\"part 2, evaluation of packets:\", [p.evaluate() for p in packets])\n"
       ],
@@ -1545,14 +1545,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "45WZNvhm4pXF",
-        "outputId": "c4c2692e-dafc-44ff-989e-3a740cebc775"
+        "outputId": "e2e133e1-488f-495a-be48-b194f0e4102e"
       },
-      "execution_count": 66,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "packets: [+(*(843, ==(813368, 813368)), 53943, *(<(34819, 34819), 7549566), max(11, 680, 58649361, 1258420029, 3613), +(7856267009332), *(63406121605, >(176, 64705)), 242, 119, min(658), min(62875, 2582, 96), *(716, <(1831, 1)), *(24693, >(424545, 15)), +(2, 3), *(<(234, 668770), 103076), *(<(227, 227), 3988), *(<(+(4, 15, 3), +(15, 9, 9)), 38844), *(9), min(3563, 72, 1885, 824940, 1022465), 94, *(89, ==(+(4, 15, 2), +(10, 11, 12))), *(+(9, 14, 15), +(7, 10, 6), +(11, 15, 11)), *(>(+(4, 9, 8), +(8, 10, 14)), 10), *(11889, >(77, 2640)), *(>(66148276326, 127), 18970730068), max(13, 139, 46), 9761, *(<(+(2, 14, 3), +(9, 3, 2)), 158452), *(==(64, 203), 497), +(6, 49, 1002099, 689786, 3646), +(12656205, 57796478963, 12634253), *(162, 47, 19, 98, 142), 142, min(595628, 174, 22302, 777), 3099, max(12, 1521), *(255, 86), max(780128, 33621, 59805, 177), *(<(8964053, 9), 359815), 42673, +(*(9, 10, 10), *(9, 4, 4), *(15, 13, 2)), max(+(max(*(max(min(min(min(*(max(max(+(max(min(max(min(+(+(*(*(30)))))))))))))))))))), min(4291448979, 3947), *(38, 99, 89), 3095, *(5, <(239, 3570)), max(786945), +(56542, 14, 8, 11173548), *(113, >(114, 114)), *(35368, >(4, 4)), *(13491, >(+(5, 15, 14), +(13, 5, 8))), 2222, *(104, ==(2954, 124)), *(108, 17, 227, 202))]\n",
+            "rest: 0\n",
             "part 1, sum of packet versions: 989\n",
             "part 2, evaluation of packets: [7936430475134]\n"
           ]
@@ -1566,7 +1568,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyOP4iv2vKzHk1fe1OJsfb/R",
+      "authorship_tag": "ABX9TyPkFplDg3cx0bhRSejjRrS1",
       "include_colab_link": true
     },
     "kernelspec": {
