--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1486,16 +1486,16 @@
         "# Input is a tuple (digit chunk, parsing rest), so the function can be used with takeuntil\n",
         "# on a sequence produced by chunked\n",
         "def is_last_digit(digit_and_rest) -> bool:\n",
-        "  digit, rest = digit_and_rest\n",
+        "  digit, _ = digit_and_rest\n",
         "  return digit[0] == '0'\n",
         "\n",
         "# Literal parsing for use with reduce, appends the binary representation of a \n",
         "# digit to the previously parsed beginning of the literal;\n",
         "# returns the new literal beginning with the rest after the chunk just added\n",
-        "def append_digit(lit_and_prev_rest, digit_and_rest):\n",
-        "  lit, _ = lit_and_prev_rest\n",
+        "def append_digit(literal_and_prev_rest, digit_and_rest):\n",
+        "  literal, _ = literal_and_prev_rest\n",
         "  digit, rest = digit_and_rest\n",
-        "  return (lit + digit[1:len(digit)], rest)\n",
+        "  return (literal + digit[1:len(digit)], rest)\n",
         "\n",
         "# Parsing = recursive assembly of a tree of Operators and Literals\n",
         "\n",
@@ -1503,32 +1503,32 @@
         "  lit, rest = reduce(append_digit, takeuntil(is_last_digit, chunked(bin_input, chunk_len)), ('', ''))\n",
         "  return (Literal(version, int(lit, 2)), rest)\n",
         "\n",
-        "def parse_op_len(version, type_id, bin_input):\n",
+        "def parse_operator_with_length_limit(version, type_id, bin_input):\n",
         "  limit, rest = read_bits(bin_input, 15)\n",
         "  packets, sub_rest = parse_packets(rest[:limit])\n",
         "  assert sub_rest == ''\n",
         "  return (Operator(version, type_id, packets), rest[limit:])\n",
         "\n",
-        "def parse_op_num(version, type_id, bin_input):\n",
+        "def parse_operator_with_operands_limit(version, type_id, bin_input):\n",
         "  limit, rest = read_bits(bin_input, 11)\n",
         "  packets, rest = parse_packets(rest, limit)\n",
         "  return (Operator(version, type_id, packets), rest)\n",
         "\n",
-        "def parse_packets(bin_input, packet_limit=0):\n",
+        "def parse_packets(bin_input, packet_limit=None):\n",
         "  packets = []\n",
         "  rest = bin_input\n",
-        "  while len(rest) >= 11 and (packet_limit == 0 or len(packets) < packet_limit):\n",
+        "  while len(rest) >= 11 and (packet_limit is None or len(packets) < packet_limit):\n",
         "    version, rest = read_bits(rest, 3)\n",
         "    type_id, rest = read_bits(rest, 3)\n",
         "    if (type_id == 4):\n",
-        "      # literal\n",
-        "      lit, rest = parse_literal(version, rest, 5)\n",
-        "      packets.append(lit)\n",
+        "      literal, rest = parse_literal(version, rest, 5)\n",
+        "      packets.append(literal)\n",
         "    else: \n",
-        "      # operator\n",
         "      len_type_id, rest = read_bits(rest, 1)\n",
-        "      op, rest = parse_op_len(version, type_id, rest) if len_type_id==0 else parse_op_num(version, type_id, rest)\n",
-        "      packets.append(op)\n",
+        "      operator, rest = parse_operator_with_length_limit(version, type_id, rest) \\\n",
+        "                  if len_type_id==0 \\\n",
+        "                  else parse_operator_with_operands_limit(version, type_id, rest)\n",
+        "      packets.append(operator)\n",
         "  return packets, rest\n",
         "\n",
         "hex_input = open('drive/MyDrive/AoC/2021/input16.txt').readline().strip()\n",
@@ -1545,9 +1545,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "45WZNvhm4pXF",
-        "outputId": "e2e133e1-488f-495a-be48-b194f0e4102e"
+        "outputId": "7af980a8-9c47-4fc7-e1a2-67cf0f22cd6f"
       },
-      "execution_count": 68,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1568,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPkFplDg3cx0bhRSejjRrS1",
+      "authorship_tag": "ABX9TyMfWP2koR54jq4Dw14l4qU9",
       "include_colab_link": true
     },
     "kernelspec": {
