--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1298,8 +1298,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# dijkstra shortest path from (0, 0) to target node\n",
-        "# we have a fully connected graph here consisting of h * w nodes where there are edges to 2-4 neighbors (2 in the corners, 3 at the borders, 4 in the middle).\n",
+        "# Dijkstra shortest path from (0, 0) to target node\n",
+        "# We have a fully connected graph here consisting of h * w nodes where there are edges to 2-4 neighbors (2 in the corners, 3 at the borders, 4 in the middle).\n",
         "# The node values can be viewed as distance from any of its neighbors\n",
         "\n",
         "def dijkstra_dist(nodes, w1, h1, rep, goal):\n",
@@ -1500,8 +1500,8 @@
         "# Parsing = recursive assembly of a tree of Operators and Literals\n",
         "\n",
         "def parse_literal(version, bin_input, chunk_len):\n",
-        "  lit, rest = reduce(append_digit, takeuntil(is_last_digit, chunked(bin_input, chunk_len)), ('', ''))\n",
-        "  return (Literal(version, int(lit, 2)), rest)\n",
+        "  literal, rest = reduce(append_digit, takeuntil(is_last_digit, chunked(bin_input, chunk_len)), ('', ''))\n",
+        "  return (Literal(version, int(literal, 2)), rest)\n",
         "\n",
         "def parse_operator_with_length_limit(version, type_id, bin_input):\n",
         "  limit, rest = read_bits(bin_input, 15)\n",
@@ -1545,9 +1545,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "45WZNvhm4pXF",
-        "outputId": "7af980a8-9c47-4fc7-e1a2-67cf0f22cd6f"
+        "outputId": "441624ea-244a-4f5d-cc21-ce79feb268cb"
       },
-      "execution_count": 73,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1568,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMfWP2koR54jq4Dw14l4qU9",
+      "authorship_tag": "ABX9TyPwT1JNzxvUxCPUH/LXl8ZM",
       "include_colab_link": true
     },
     "kernelspec": {
