--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1547,7 +1547,7 @@
         "id": "45WZNvhm4pXF",
         "outputId": "441624ea-244a-4f5d-cc21-ce79feb268cb"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1560,6 +1560,114 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "17) Trajectories"
+      ],
+      "metadata": {
+        "id": "IxXDP70ckYki"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "from math import sqrt\n",
+        "\n",
+        "input = open('drive/MyDrive/AoC/2021/input17.txt').readline().strip()\n",
+        "print(input)\n",
+        "tdef = [int(g) for g in re.fullmatch('target area: x=(-?\\d+)..(-?\\d+), y=(-?\\d+)..(-?\\d+)', input).groups()]\n",
+        "t_min_x = tdef[0]\n",
+        "t_max_x = tdef[1]\n",
+        "t_min_y = tdef[2]\n",
+        "t_max_y = tdef[3]\n",
+        "\n",
+        "def overshot_x(x):\n",
+        "  return x > t_max_x\n",
+        "\n",
+        "def overshot_y(y):\n",
+        "  return y < t_min_y\n",
+        "\n",
+        "def simulate(x, y, vx, vy):\n",
+        "  while not overshot_x(x) and not overshot_y(y):\n",
+        "    x += vx\n",
+        "    y += vy\n",
+        "    vx = max(vx-1, 0)\n",
+        "    vy -= 1\n",
+        "    yield x, y\n",
+        "\n",
+        "def on_target(p):\n",
+        "  x, y = p\n",
+        "  return x in range(t_min_x, t_max_x+1) and y in range(t_min_y, t_max_y+1)\n",
+        "\n",
+        "def trajectory(vx, vy):\n",
+        "  return [(x, y) for x, y in simulate(0, 0, vx, vy)]\n",
+        "\n",
+        "def t_on_target(trajectory):\n",
+        "  # we stop calculating when overshot, so the second from last point must be on or before target\n",
+        "  return on_target(trajectory[-2]) \n",
+        "\n",
+        "def get_max_y(trajectory):\n",
+        "  return max(y for x, y in trajectory)\n",
+        "\n",
+        "# Did not have much time and concentration for this. So just brute forced it,\n",
+        "# making sure to calculate all trajectories with initial velocities including\n",
+        "# - all the coordinates of the target area\n",
+        "#   (reaching the target in one step, covering all target fields) \n",
+        "#   i. e. init_vx <= max x of the target, init_vy >= min y of the target\n",
+        "# - init_vx + (init_vx-1) + ... + 1 >= min x of the target (t_min_x), \n",
+        "#   <=> init_vx(init_vx+1)/2 >= t_min_x\n",
+        "#   <=> init_vx^2 + init_vx - 2*t_min_x >= 0\n",
+        "#   <=> positive init_vx >= (-1 + sqrt(1 + 8*t_min_x))/2 \n",
+        "# - for upper bound of init_vy, just tried 100, 200 and\n",
+        "#   discovered that init_vy cannot be greater than 104 by looking at the output \n",
+        "#   of printing all trajectories on target\n",
+        "# Then just calculated the trajectories for all initial velocities within these\n",
+        "# bounds and collected the max max(y) of all trajectories hitting the target\n",
+        "\n",
+        "on_target = \\\n",
+        "  [t for t in \n",
+        "    [trajectory(init_vx, init_vy) \n",
+        "      for init_vx in range(int((-1+sqrt(1+8*t_min_x))/2), t_max_x+1) \n",
+        "      for init_vy in range (t_min_y, 105)]\n",
+        "    if t_on_target(t)]\n",
+        "\n",
+        "print(\"max y with trajectory:\", max(get_max_y(t) for t in on_target))\n",
+        "print(\"initial velocities on target:\", len(on_target))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "buuM77nSkaSC",
+        "outputId": "c5a28bb2-5c5a-4a26-e0cf-8055322f5056"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "target area: x=206..250, y=-105..-57\n",
+            "max y with trajectory: 5460\n",
+            "initial velocities to target: 3618\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#"
+      ],
+      "metadata": {
+        "id": "qlAQKJKYCEcd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1568,7 +1676,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPwT1JNzxvUxCPUH/LXl8ZM",
+      "authorship_tag": "ABX9TyNI5b2fJn/3FateAmtVHVW2",
       "include_colab_link": true
     },
     "kernelspec": {
