--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1643,9 +1643,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "buuM77nSkaSC",
-        "outputId": "c5a28bb2-5c5a-4a26-e0cf-8055322f5056"
+        "outputId": "ce3738b9-9ebd-4535-c921-8f57b9c6a9a4"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1653,7 +1653,7 @@
           "text": [
             "target area: x=206..250, y=-105..-57\n",
             "max y with trajectory: 5460\n",
-            "initial velocities to target: 3618\n"
+            "initial velocities on target: 3618\n"
           ]
         }
       ]
