--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -524,22 +524,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
+          "base_uri": "https://localhost:8080/"
         },
         "id": "zzL9RSGA84Ub",
-        "outputId": "680f691c-e974-422d-ba9e-8db2ba6d2578"
+        "outputId": "e9b5efd5-ccb2-4097-dce5-c91faf37ca9c"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-08e946669f33>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    print(\"part 1:\", min((i, consumption1(i, positions)) for i in range(0, len(positions)), key=lambda t: t[1]))\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Generator expression must be parenthesized\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "estimation(part 1): 243.2525\n",
+            "part 1: (347, 347449)\n",
+            "part 2: (486, 98039527)\n"
           ]
         }
       ],
