--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -524,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1574,6 +1574,7 @@
       "cell_type": "code",
       "source": [
         "import re\n",
+        "from itertools import takewhile\n",
         "from math import sqrt\n",
         "\n",
         "input = open('drive/MyDrive/AoC/2021/input17.txt').readline().strip()\n",
@@ -1590,24 +1591,28 @@
         "def overshot_y(y):\n",
         "  return y < t_min_y\n",
         "\n",
+        "def overshot(p):\n",
+        "  x, y = p\n",
+        "  return overshot_x(x) or overshot_y(y)\n",
+        "\n",
         "def simulate(x, y, vx, vy):\n",
-        "  while not overshot_x(x) and not overshot_y(y):\n",
+        "  while True:\n",
         "    x += vx\n",
         "    y += vy\n",
         "    vx = max(vx-1, 0)\n",
         "    vy -= 1\n",
         "    yield x, y\n",
         "\n",
+        "def trajectory(init_vx, init_vy):\n",
+        "  return [(x, y) for x, y in takewhile(lambda p: not overshot(p), simulate(0, 0, init_vx, init_vy))]\n",
+        "\n",
         "def on_target(p):\n",
         "  x, y = p\n",
         "  return x in range(t_min_x, t_max_x+1) and y in range(t_min_y, t_max_y+1)\n",
         "\n",
-        "def trajectory(vx, vy):\n",
-        "  return [(x, y) for x, y in simulate(0, 0, vx, vy)]\n",
-        "\n",
         "def t_on_target(trajectory):\n",
-        "  # we stop calculating when overshot, so the second from last point must be on or before target\n",
-        "  return on_target(trajectory[-2]) \n",
+        "  # we take while not overshot, so the last point must be on or before target\n",
+        "  return on_target(trajectory[-1]) \n",
         "\n",
         "def get_max_y(trajectory):\n",
         "  return max(y for x, y in trajectory)\n",
@@ -1643,9 +1648,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "buuM77nSkaSC",
-        "outputId": "bbd5e044-5e93-4e50-cfe2-78c4cb2ce8b6"
+        "outputId": "bb9f05f7-e023-471e-8a32-f3ccea95d6aa"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,7 +1681,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNJQyuV70x2i8FDqj+E0vKB",
+      "authorship_tag": "ABX9TyOudOvqGx7ISbaaJQEH7DhD",
       "include_colab_link": true
     },
     "kernelspec": {
