--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1639,7 +1639,7 @@
         "      for init_vy in range(t_min_y, 105)]\n",
         "    if t_on_target(t)]\n",
         "\n",
-        "print(\"max y with trajectory:\", max(get_max_y(t) for t in on_target))\n",
+        "print(\"max y if trajectory on target:\", max(get_max_y(t) for t in on_target))\n",
         "print(\"initial velocities on target:\", len(on_target))\n",
         "\n"
       ],
@@ -1648,31 +1648,180 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "buuM77nSkaSC",
-        "outputId": "bb9f05f7-e023-471e-8a32-f3ccea95d6aa"
+        "outputId": "6078620e-312c-4b53-e84d-ad2181735d12"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "target area: x=206..250, y=-105..-57\n",
-            "max y with trajectory: 5460\n",
+            "max y if trajectory on target: 5460\n",
             "initial velocities on target: 3618\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#"
+        "18) Snailfish (Tree of pairs and literals)"
       ],
       "metadata": {
-        "id": "qlAQKJKYCEcd"
+        "id": "FvW1Yf5tRtal"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "from functools import reduce\n",
+        "from itertools import takewhile\n",
+        "\n",
+        "class Node:\n",
+        "  def __init__(self):\n",
+        "    self.parent = None\n",
+        "  def find_num_left(self):\n",
+        "    return None if self.parent is None else \\\n",
+        "      (self.parent.find_num_left() if self == self.parent.left else self.parent.left.find_last_number())    \n",
+        "  def find_num_right(self):\n",
+        "    return None if self.parent is None else \\\n",
+        "      (self.parent.right.find_first_number() if self == self.parent.left else self.parent.find_num_right())  \n",
+        "  def add(self, right, debug=False):\n",
+        "# TODO if find_num_left()/right() above did not need self.parent, \n",
+        "#  add() would not have to mutate the tree structure, i.e. no need for clone(),\n",
+        "#  and explode and split could be implemented (as methods) to clone only nodes \n",
+        "#  to be mutated and their ancestors (including root, and return the new root!)\n",
+        "    root = Pair(self.clone(), right.clone())\n",
+        "    if debug: print('after addition:', root)\n",
+        "    needs_reduce = True\n",
+        "    while needs_reduce:\n",
+        "# To reduce a snailfish number, you must repeatedly do the first action in \n",
+        "# this list that applies to the snailfish number:\n",
+        "# - If any pair is nested inside four pairs, the leftmost such pair explodes. \n",
+        "# - If any regular number is 10 or greater, the leftmost such regular number splits.\n",
+        "      deep_pair = root.find_first_pair_at_depth(4)\n",
+        "      if deep_pair is not None:\n",
+        "# To explode a pair, the pair's left value is added to the first regular\n",
+        "# number to the left of the exploding pair (if any), and the pair's right \n",
+        "# value is added to the first regular number to the right of the exploding pair (if any).\n",
+        "# Exploding pairs will always consist of two regular numbers. \n",
+        "# Then, the entire exploding pair is replaced with the regular number 0.\n",
+        "        l = deep_pair.find_num_left()\n",
+        "        r = deep_pair.find_num_right()\n",
+        "        if l is not None:\n",
+        "          l.val += deep_pair.left.val\n",
+        "        if r is not None:\n",
+        "          r.val += deep_pair.right.val\n",
+        "        lit = Literal(0)\n",
+        "        lit.parent = deep_pair.parent\n",
+        "        if deep_pair == deep_pair.parent.left:\n",
+        "          lit.parent.left = lit\n",
+        "        else:\n",
+        "          lit.parent.right = lit\n",
+        "        if debug: print('after explode: ', root)\n",
+        "      else:\n",
+        "        large_number = root.find_first_number_gte(10)\n",
+        "        if large_number is not None:\n",
+        "# To split a regular number, replace it with a pair; \n",
+        "# the left element of the pair should be the regular number divided by two and rounded down, \n",
+        "# while the right element of the pair should be the regular number divided by two and rounded up.\n",
+        "          pair = Pair(Literal(math.floor(large_number.val/2)), Literal(math.ceil(large_number.val/2)))\n",
+        "          pair.parent = large_number.parent\n",
+        "          if large_number == large_number.parent.left:\n",
+        "            pair.parent.left = pair\n",
+        "          else:\n",
+        "            pair.parent.right = pair\n",
+        "          if debug: print('after split:   ', root)\n",
+        "        else:\n",
+        "          needs_reduce = False\n",
+        "    return root\n",
+        "\n",
+        "class Literal(Node):\n",
+        "  def __init__(self, val):\n",
+        "    Node.__init__(self)\n",
+        "    self.val = val\n",
+        "  def clone(self):\n",
+        "    return Literal(self.val)\n",
+        "  def find_first_number_gte(self, limit):\n",
+        "    return self if self.val >= limit else None\n",
+        "  def find_first_pair_at_depth(self, target_depth, depth):\n",
+        "    return None\n",
+        "  def find_first_number(self):\n",
+        "    return self\n",
+        "  def find_last_number(self):\n",
+        "    return self\n",
+        "  def magnitude(self):\n",
+        "    return self.val\n",
+        "  def __str__(self):\n",
+        "    return f'{self.val}'\n",
+        "  __repr__ = __str__\n",
+        "\n",
+        "class Pair(Node):\n",
+        "  def __init__(self, left, right):\n",
+        "    Node.__init__(self)\n",
+        "    self.left = left\n",
+        "    self.right = right\n",
+        "    self.left.parent = self\n",
+        "    self.right.parent = self\n",
+        "  def clone(self):\n",
+        "    return Pair(self.left.clone(), self.right.clone())\n",
+        "  def find_first_number_gte(self, limit):\n",
+        "    return self.left.find_first_number_gte(limit) or self.right.find_first_number_gte(limit)\n",
+        "  def find_first_pair_at_depth(self, target_depth, depth=0):\n",
+        "    return self if depth == target_depth else \\\n",
+        "      self.left.find_first_pair_at_depth(target_depth, depth+1) or \\\n",
+        "      self.right.find_first_pair_at_depth(target_depth, depth+1)\n",
+        "  def find_first_number(self):\n",
+        "    return self.left.find_first_number()\n",
+        "  def find_last_number(self):\n",
+        "    return self.right.find_last_number()\n",
+        "  def magnitude(self):\n",
+        "    return 3*self.left.magnitude() + 2*self.right.magnitude()\n",
+        "  def __str__(self):\n",
+        "    return f'[{self.left}, {self.right}]'\n",
+        "  __repr__ = __str__\n",
+        "\n",
+        "# returns parsing result and, if depth > 0, also the rest, assuming balanced brackets and no spaces\n",
+        "def parse(input, depth=0):\n",
+        "  char, rest = input[0], input[1:]\n",
+        "  if char == '[':\n",
+        "    left, rest = parse(rest, depth+1)\n",
+        "    right, rest = parse(rest[1:], depth+1)  # skip the ,\n",
+        "    pair = Pair(left, right)\n",
+        "    return (pair, rest[1:]) if depth > 0 else pair  # skip the ]; on root level, don't return the rest (assuming it is empty)\n",
+        "  else:\n",
+        "    # must be a digit\n",
+        "    rest_digits = ''.join(takewhile(lambda char: char in '0123456789', rest))\n",
+        "    lit = Literal(int(char + rest_digits))\n",
+        "    return (lit, rest[len(rest_digits):]) if depth > 0 else lit\n",
+        "\n",
+        "parsed_input = [parse(line.strip()) for line in open('drive/MyDrive/AoC/2021/input18.txt')]\n",
+        "print(\"input size:\", len(parsed_input))\n",
+        "print(\"part 1, magnitude of sum of all:     \", reduce(Node.add, parsed_input).magnitude())\n",
+        "print(\"part 2, largest m. of sum of any two:\", \n",
+        "      max(left.add(right).magnitude() for left in parsed_input for right in parsed_input if left != right))"
+      ],
+      "metadata": {
+        "id": "UTqv7QKiRw4N",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "88fa3c9f-3d0f-4129-c256-fd8f8dd7b79e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input size: 100\n",
+            "part 1, magnitude of sum of all:      3305\n",
+            "part 2, largest m. of sum of any two: 4563\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1681,7 +1830,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyOudOvqGx7ISbaaJQEH7DhD",
+      "authorship_tag": "ABX9TyO3FfIYSwymcEN/nXfewYp+",
       "include_colab_link": true
     },
     "kernelspec": {
