--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1690,8 +1690,8 @@
         "      (self.parent.right.find_first_number() if self == self.parent.left else self.parent.find_num_right())  \n",
         "  def add(self, right, debug=False):\n",
         "# TODO if find_num_left()/right() above did not need self.parent, \n",
-        "#  add() would not have to mutate the tree structure, i.e. no need for clone(),\n",
-        "#  and explode and split could be implemented (as methods) to clone only nodes \n",
+        "#  add() would not have to mutate the tree structure, i.e. no need for clone() and replace_with(),\n",
+        "#  also explosion and split could be implemented (as methods) to clone only nodes \n",
         "#  to be mutated and their ancestors (including root, and return the new root!)\n",
         "    root = Pair(self.clone(), right.clone())\n",
         "    if debug: print('after addition:', root)\n",
@@ -1708,18 +1708,14 @@
         "# value is added to the first regular number to the right of the exploding pair (if any).\n",
         "# Exploding pairs will always consist of two regular numbers. \n",
         "# Then, the entire exploding pair is replaced with the regular number 0.\n",
-        "        l = deep_pair.find_num_left()\n",
-        "        r = deep_pair.find_num_right()\n",
-        "        if l is not None:\n",
-        "          l.val += deep_pair.left.val\n",
-        "        if r is not None:\n",
-        "          r.val += deep_pair.right.val\n",
+        "        num_left = deep_pair.find_num_left()\n",
+        "        num_right = deep_pair.find_num_right()\n",
+        "        if num_left is not None:\n",
+        "          num_left.val += deep_pair.left.val  # mutation\n",
+        "        if num_right is not None:\n",
+        "          num_right.val += deep_pair.right.val  # mutation\n",
         "        lit = Literal(0)\n",
-        "        lit.parent = deep_pair.parent\n",
-        "        if deep_pair == deep_pair.parent.left:\n",
-        "          lit.parent.left = lit\n",
-        "        else:\n",
-        "          lit.parent.right = lit\n",
+        "        deep_pair.replace_with(lit)  # mutation\n",
         "        if debug: print('after explode: ', root)\n",
         "      else:\n",
         "        large_number = root.find_first_number_gte(10)\n",
@@ -1728,15 +1724,20 @@
         "# the left element of the pair should be the regular number divided by two and rounded down, \n",
         "# while the right element of the pair should be the regular number divided by two and rounded up.\n",
         "          pair = Pair(Literal(math.floor(large_number.val/2)), Literal(math.ceil(large_number.val/2)))\n",
-        "          pair.parent = large_number.parent\n",
-        "          if large_number == large_number.parent.left:\n",
-        "            pair.parent.left = pair\n",
-        "          else:\n",
-        "            pair.parent.right = pair\n",
+        "          large_number.replace_with(pair)  # mutation\n",
         "          if debug: print('after split:   ', root)\n",
         "        else:\n",
         "          needs_reduce = False\n",
         "    return root\n",
+        "  def replace_with(self, node):\n",
+        "    # swaps out self for node by modifying node's ancestores left/right, returns self\n",
+        "    node.parent = self.parent\n",
+        "    if self.parent is not None:\n",
+        "      if self == self.parent.left:\n",
+        "        self.parent.left = node\n",
+        "      else:\n",
+        "        self.parent.right = node\n",
+        "    return self\n",
         "\n",
         "class Literal(Node):\n",
         "  def __init__(self, val):\n",
@@ -1808,9 +1809,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4268dd1f-dd65-4b55-fd8a-ebd7d025d5ab"
+        "outputId": "62ae78fb-155d-49d2-d6cc-cfc8e4cc4d94"
       },
-      "execution_count": 141,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "stream",
@@ -1830,7 +1831,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyO3FfIYSwymcEN/nXfewYp+",
+      "authorship_tag": "ABX9TyPH097LT+3GMLMq/580Dc5P",
       "include_colab_link": true
     },
     "kernelspec": {
